--- a/src/app/onboarding/page.module.css
+++ b/src/app/onboarding/page.module.css
@@ -12,3 +12,13 @@
 .sparkles {
     z-index: -1;
 }
+
+.bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    opacity: 0.2
+}
