--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,15 @@ body {
   color: #fff;
   background: #000000
 }
+
+.auth-button {
+  padding: .75rem 1.45rem;
+  background-color: rgba(255, 220, 64, 0.05);
+  border-radius: 1.5rem;
+  border: 1px solid #ffffff3d;
+  transition: all .25s ease;
+}
+.auth-button:hover {
+  background-color: rgba(255, 220, 64, 0.1);
+  border-color: #ffffff11;
+}
