--- a/src/app/onboarding/page.module.css
+++ b/src/app/onboarding/page.module.css
@@ -22,3 +22,10 @@
     z-index: -2;
     opacity: 0.2
 }
+
+@media screen and (max-width: 768px) {
+    .main {
+        padding-inline: 1rem;
+        height: 100vh;
+    }
+}
