--- a/components/component/NavBar/Navbar.module.css
+++ b/components/component/NavBar/Navbar.module.css
@@ -2,7 +2,7 @@
     border-bottom: 1px solid #ffffff15;
     background-color: rgba(255, 255, 255, 0.048);
     backdrop-filter: blur(10px);
-    padding: 2rem 0;
+    padding: .75rem 2rem;
 }
 
 .navbar::after {
@@ -16,6 +16,14 @@
     background-color: #9747FF;
     filter: blur(120px);
     /* animation: color-change 10s infinite linear alternate; */
+}
+.logo_wrapper {
+    align-items: center;
+}
+.platform_name {
+    font-size: .85rem;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 @keyframes color-change {
