--- a/src/app/homepage.module.css
+++ b/src/app/homepage.module.css
@@ -26,7 +26,7 @@
 }
 
 .section_one {
-    margin-top: 15rem;
+    margin-top: 8rem;
 }
 
 .main_content {
@@ -35,7 +35,7 @@
 
 @media screen and (max-width: 768px) {
     .hero_title {
-        font-size: 4.5rem;
+        font-size: 4rem;
         max-width: 80vw;
     }
     .hero_desc {
@@ -46,5 +46,8 @@
     }
     .btn_link {
         margin-inline: 1rem;
+    }
+    .section_one {
+        margin-top: 6.5rem;
     }
 }
