Update background color in page.module.css

--- a/src/app/notes/page.module.css
+++ b/src/app/notes/page.module.css
@@ -24,7 +24,7 @@
 }
 .category {
   margin: 1rem 0;
-  background-color: #a7f2ff;
+  background-color: #d4a7ff;
   color: black;
   width: fit-content;
   padding: 0.5rem 0.75rem;
