--- a/src/app/notes/page.module.css
+++ b/src/app/notes/page.module.css
@@ -1,39 +1,39 @@
 .main {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    padding: 5rem 12rem;
-    height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 5rem 12rem;
+  height: 100vh;
 }
 .search_box_wrapper {
-    width: 50%;
-    margin-bottom: 3rem;
+  width: 50%;
+  margin-bottom: 3rem;
 }
 .search_box {
-    padding: .75rem 1.25rem;
-    border: none;
-    outline: none;
-    width: 75%;
-    border-radius: .75rem;
-    color: #000;
-    margin-right: 1rem;
+  padding: 0.75rem 1.25rem;
+  border: none;
+  outline: none;
+  width: 75%;
+  border-radius: 0.75rem;
+  color: #000;
+  margin-right: 1rem;
 }
 .search_label {
-    cursor: pointer;
+  cursor: pointer;
 }
 .category {
-  margin: 1rem 0;
-  background-color: #d4a7ff;
-  color: black;
-  width: fit-content;
-  padding: 0.5rem 0.75rem;
-  border-radius: 0.85rem;
-  font-size: 0.75rem;
+  font-size: x-small;
+  color: antiquewhite;
+  position: absolute;
+  top: -2rem;
+  left: 0;
 }
 
 .card {
+  position: relative;
   width: 23rem;
+  border-radius: 1.05rem;
 }
 
 .notes_gallery {
@@ -42,4 +42,8 @@
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 2.5rem;
   grid-row-gap: 2rem;
+}
+
+.border_trending {
+  border: 2px solid #a7ffbd;
 }
