--- a/components/component/NavBar/Navbar.module.css
+++ b/components/component/NavBar/Navbar.module.css
@@ -1,8 +1,17 @@
 .navbar {
-    border-bottom: 1px solid #ffffff15;
+    border-right: 1px solid #ffffff2f;
     background-color: rgba(255, 255, 255, 0.048);
     backdrop-filter: blur(10px);
-    padding: .75rem 2rem;
+    padding: 2rem 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: sticky;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 15%;
 }
 
 .navbar::after {
@@ -18,6 +27,8 @@
     /* animation: color-change 10s infinite linear alternate; */
 }
 .logo_wrapper {
+    display: flex;
+    justify-content: center;
     align-items: center;
     width: 30%;
 }
@@ -95,17 +106,6 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 2rem;
-}
-
-.personalised_nav {
-    padding-inline: 5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.logo {
-    align-self: center;
-    margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 768px) {
