--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,8 @@ body {
   background-color: rgba(255, 220, 64, 0.1);
   border-color: #ffffff11;
 }
+
+.main-content {
+  width: 85%;
+  overflow-y: scroll;
+}
