--- a/components/ui/authButtonsStyles.module.css
+++ b/components/ui/authButtonsStyles.module.css
@@ -1,7 +1,7 @@
 .dialog_content {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.192);
     z-index: 100;
