--- a/components/component/NavBar/Navbar.module.css
+++ b/components/component/NavBar/Navbar.module.css
@@ -11,17 +11,18 @@
     left: 0;
     top: 0;
     height: 100vh;
-    width: 15%;
+    width: 20%;
 }
 
 .navbar::after {
     content: '';
     position: absolute;
-    top: -2.5rem;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 50%;
+    left: 0%;
+    transform: translateX(-50%, -50%);
     width: 60%;
     height: 3.25rem;
+    z-index: -10;
     background-color: #9747FF;
     filter: blur(120px);
     /* animation: color-change 10s infinite linear alternate; */
