--- a/components/component/UploadForm/styles.module.css
+++ b/components/component/UploadForm/styles.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-evenly;
     padding: 2rem 4.5rem;
-    width: 80vw;
+    width: 100%;
 }
 
 .card_content {
