--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,33 +3,29 @@
   align-items: center;
   justify-content: space-between;
   padding: 0rem;
-  /* height: 100vh; */
-}
-
-.search_box_wrapper {
   width: 100%;
-}
-.search_box {
-  padding: 0.75rem 1.25rem;
-  border: none;
-  outline: none;
-  width: 75%;
-  border-radius: 0.75rem;
-  color: #000;
-  margin-right: 1rem;
-}
-.search_label {
-  cursor: pointer;
+  position: relative;
 }
 
-.ads_section {
-  width: 50%;
-  height: 100%;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-  padding-inline: 2rem;
-}
-.notes_timeline_component {
-  padding-top: 5rem;
+.main_content {
   border-right: 1px solid #5a5a5a65;
+  position: relative;
+  width: 60%;
+}
+.main_content_nav {
+  width: 100%;
+  padding: 1rem 2rem;
+  z-index: 100;
+}
+/* .notes_timeline_component {
+  padding-top: 5rem;
+} */
+.search_box {
+  position: fixed;
+  right: 6rem;
+}
+.ads_section {
+  width: 40%;
+  height: 100%;
+  padding: 2rem 1rem;
 }
