--- a/components/component/SearchBox/SearchBox.module.css
+++ b/components/component/SearchBox/SearchBox.module.css
@@ -6,11 +6,102 @@
 .search_box:focus {
   border: none;
   outline: none;
-  
 }
 .search_label {
   cursor: pointer;
 }
 .search_box_wrapper {
-  width: 20%;
+  width: 100%;
+  position: absolute;
+  top: 3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 100;
+  padding-inline: 15rem;
+  background-color: black;
+}
+
+.search_results {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  top: 8rem;
+  overflow-y: scroll;
+  height: 75vh;
+  padding-inline: 2rem;
+  display: grid;
+  grid-column-gap: 1.5rem;
+  grid-row-gap: 3rem;
+  scrollbar-width: thin;
+  scrollbar-color: #37fdaa #000;
+  grid-template-columns: repeat(3, 1fr);
+  /* mask-image: linear-gradient(black, transparent); */
+}
+.search_results::-webkit-scrollbar {
+  width: 0.5rem;
+}
+/* Style for Chrome, Safari and Opera */
+.search_results::-webkit-scrollbar {
+  width: 12px;
+}
+
+.search_results::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+/* Handle */
+.search_results::-webkit-scrollbar-thumb {
+  background: rgba(155, 155, 155, 0.5);
+}
+
+/* Handle on hover */
+.search_results::-webkit-scrollbar-thumb:hover {
+  background: rgba(155, 155, 155, 0.7);
+}
+.popularity_score {
+  color: #37fdaa;
+}
+.loading_ui {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30%;
+  transform: translateY(-50%);
+}
+.loading_ui h3 {
+  color: white;
+  font-weight: bold;
+
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+.loading_ui p {
+  color: white;
+  text-align: center;
+  font-size: 1.25rem;
+  margin-bottom: 4rem;
+}
+.results_not_found {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  top: 8rem;
+  padding-inline: 2rem;
+}
+.results_not_found h3 {
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+.results_not_found p {
+  text-align: center;
+  font-size: 1.05rem;
+  margin-bottom: 4rem;
 }
