--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,7 +6,12 @@
   width: 100%;
   position: relative;
 }
-
+/* if the system theme is dark, set the background of main to black */
+@media (prefers-color-scheme: dark) {
+  .main {
+    background: #000;
+  }
+}
 .main_content {
   border-right: 1px solid #5a5a5a65;
   position: relative;
